add more link text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <hr1>RUN BUDDY</hr1>
-        What We Do
+        What We Do What You Do Your Trainers Reach Out
     </body>
 </html>
